--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,12 +10,12 @@ destination:
 ## Maximum of clients which can connect to ProxyPass. If this should be disabled, set it to 0.
 max-clients: 0
 ## Encode and decode packets to test protocol library for bugs
-packet-testing: false
+packet-testing: true
 ## Log packets for each session
 log-packets: true
 ## Where to log packet data
 ## Valid options: console, file or both
-log-to: file
+log-to: both
 
 ## Packets to ignore to make your log more refined. These default packet are generally spammed
 ignored-packets:
